<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="20dp">

            <ImageView
                android:id="@+id/cameraIcon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_camera_alt_24"
                android:backgroundTint="@color/colorPrimary" />

            <TextView
                android:id="@+id/CameraScan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/scan_card_link"
                android:textSize="16dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvbrefNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/refNo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_ed_pnr" />

            <TextView
                android:id="@+id/tvRefNo"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/usercontrolbg"
                android:hint="@string/refNo"

                android:padding="10dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvbfltDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/flt_Date" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_ed_flightdate" />

            <EditText
                android:id="@+id/edbfltDate"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/usercontrolbg"
                android:hint="@string/flt_Date"
                android:inputType="number"
                android:padding="10dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvbPaxName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/pax_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_user" />

            <EditText
                android:id="@+id/edbpaxName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/usercontrolbg"
                android:hint="@string/pax_name"
                android:inputType="number"
                android:padding="10dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvbfltNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/flt_number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_ed_flightno" />

            <EditText
                android:id="@+id/edbFltno"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/usercontrolbg"
                android:hint="@string/flt_number"
                android:inputType="number"
                android:padding="10dp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingRight="5dp">

                <TextView
                    android:id="@+id/tvfltSecFrom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/sector_from" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_ed_from" />

                    <EditText
                        android:id="@+id/edbFltsecFr"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/usercontrolbg"
                        android:hint="@string/sector_from"
                        android:inputType="textCapCharacters"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="5dp">

                <TextView
                    android:id="@+id/tvfltSecTo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/sector_to" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_ed_to" />

                    <EditText
                        android:id="@+id/edbFltsecTo"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/usercontrolbg"
                        android:hint="@string/sector_to"
                        android:inputType="textCapCharacters"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tvbseatno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/seat_no" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_ed_seat_no" />

            <EditText
                android:id="@+id/edbseatNo"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/usercontrolbg"
                android:hint="@string/seat_no"
                android:inputType="textCapCharacters"
                android:padding="10dp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>